--- a/wp7-donor/Donor/App.xaml
+++ b/wp7-donor/Donor/App.xaml
@@ -6,12 +6,18 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
 	xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    
-    <!--Application Resources-->
-    <Application.Resources>
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:my="clr-namespace:Donor">
 
-		<ControlTemplate x:Key="PhoneDisabledTextBoxTemplate" TargetType="TextBox">
+
+        <!--Application Resources-->
+    <Application.Resources>
+        <!--<local:LocalizedStrings xmlns:local="clr-namespace:sdkGlobalizationCS" x:Key="LocalizedStrings" />-->
+        <my:AppResources x:Key="Loc" />
+        <!--<my:LocalizedStrings xmlns:local="clr-namespace:Donor" x:Key="LocalizedStrings"/>-->
+
+
+        <ControlTemplate x:Key="PhoneDisabledTextBoxTemplate" TargetType="TextBox">
 			<ContentControl x:Name="ContentElement" BorderThickness="0" HorizontalContentAlignment="Stretch" Margin="{StaticResource PhoneTextBoxInnerMargin}" Padding="{TemplateBinding Padding}" VerticalContentAlignment="Stretch"/>
 		</ControlTemplate>
 		<ControlTemplate x:Key="PhoneDisabledPasswordBoxTemplate" TargetType="PasswordBox">
