--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -29,7 +29,7 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0">
             <TextBlock x:Name="ApplicationTitle" 
-			Text="Станции переливания крови" 
+			Text="{Binding BloodStations, Source={StaticResource Loc}}"
 			 Margin="12,24,0,22"
 			Style="{StaticResource Text30pxWhite}"/>
 			
@@ -78,7 +78,7 @@
 		Background="#FFEEEEEE"
 		Grid.Row="1" Margin="0,0,0,0">
 
-            <TextBlock Text="Станций не найдено. Измените параметры фильтра." 
+            <TextBlock Text="{Binding NoStations, Source={StaticResource Loc}}" 
                        Foreground="#FF847168" Name="Noresults" TextWrapping="Wrap"
                        Margin="10,5,10,0" Visibility="Collapsed"/>
             
@@ -132,8 +132,8 @@
 
         <WPExtensions:AdvancedApplicationBar Name="AppBar" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White"
 		IsVisible="True" IsMenuEnabled="True">
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_map.png" Name="MapButton" Text="На карте" Visibility="Visible" Click="MapButton_Click" />
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_item.png" Name="FilterButton" Text="Фильтр" Visibility="Visible" Click="ApplicationBarIconButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_map.png" Name="MapButton" Text="{Binding OnMap, Source={StaticResource Loc}}" Visibility="Visible" Click="MapButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_item.png" Name="FilterButton" Text="{Binding Filter, Source={StaticResource Loc}}" Visibility="Visible" Click="ApplicationBarIconButton_Click" />
         </WPExtensions:AdvancedApplicationBar>
     </Grid>
     
