--- a/wp7-donor/Donor/CalendarMonthPage.xaml
+++ b/wp7-donor/Donor/CalendarMonthPage.xaml
@@ -69,8 +69,8 @@
             <my:MonthCalendar x:Name="Calendar1" Margin="0,0,0,0"/>
 
             <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="True" IsMenuEnabled="False" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White">
-                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_undo.png" Text="Сегодня" Name="TodayButton" Click="TodayButton_Click"/>
-                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_add.png" Text="Добавить событие" Visibility="Visible" Name="AddEventButton" Click="AddEventButton_Click" />
+                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_undo.png" Text="{Binding Today, Source={StaticResource Loc}}" Name="TodayButton" Click="TodayButton_Click"/>
+                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_add.png" Text="{Binding AddEvent, Source={StaticResource Loc}}" Visibility="Visible" Name="AddEventButton" Click="AddEventButton_Click" />
 
             </WPExtensions:AdvancedApplicationBar>
         </Grid>
