--- a/wp7-donor/Donor/CalendarYearPage.xaml
+++ b/wp7-donor/Donor/CalendarYearPage.xaml
@@ -144,10 +144,10 @@
 
         </toolkit:LockablePivot>
         <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="True" IsMenuEnabled="False" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White">
-        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_undo.png" Text="Сегодня" Name="TodayButton" Click="TodayButton_Click">
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_undo.png" Text="{Binding Today, Source={StaticResource Loc}}" Name="TodayButton" Click="TodayButton_Click">
         </WPExtensions:AdvancedApplicationBarIconButton>
-        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_add.png" Text="Добавить событие" Visibility="Visible" Name="AddEventButton" Click="AddEventButton_Click" />
-        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_calendar.png" Text="Календарь" Name="MonthCalendarButton" Click="MonthCalendarButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_add.png" Text="{Binding AddEvent, Source={StaticResource Loc}}" Visibility="Visible" Name="AddEventButton" Click="AddEventButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_calendar.png" Text="{Binding Calendar, Source={StaticResource Loc}}" Name="MonthCalendarButton" Click="MonthCalendarButton_Click" />
 
         </WPExtensions:AdvancedApplicationBar>
 </Grid>
