--- a/wp7-donor/Donor/EventEditPage.xaml
+++ b/wp7-donor/Donor/EventEditPage.xaml
@@ -92,7 +92,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="20,60,0,20">
-            <TextBlock x:Name="ApplicationTitle" Text="Cобытие" Style="{StaticResource Text30pxWhite}"/>
+            <TextBlock x:Name="ApplicationTitle" Text="{Binding Event, Source={StaticResource Loc}}" Style="{StaticResource Text30pxWhite}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
@@ -102,12 +102,12 @@
                     <toolkit:ListPicker  
 			x:Name="EventType" 
 			 Style="{StaticResource ListPickerStyle1}"
-			FullModeHeader="Тип события" 
+			FullModeHeader="{Binding EventType, Source={StaticResource Loc}}" 
 			FontSize="24" Foreground="#FF847168"
 			SelectionChanged="EventType_SelectionChanged" 
 			Loaded="EventType_Loaded" BorderBrush="#FF4F3B34" Background="#FF4F3B34">
                         <toolkit:ListPicker.Header>
-                            <TextBlock Text="Тип события" FontSize="24" 
+                            <TextBlock Text="{Binding EventType, Source={StaticResource Loc}}" FontSize="24" 
 					Foreground="#FF847168"/>
                         </toolkit:ListPicker.Header>
                         <toolkit:ListPicker.ItemTemplate>
@@ -121,12 +121,12 @@
 
                     <toolkit:ListPicker x:Name="GiveType" 
                                         Margin="12,-2,12,10"
-			FullModeHeader="Вид кроводачи" FontSize="24" Foreground="#FFDF8D4B" 
+			FullModeHeader="" FontSize="24" Foreground="#FFDF8D4B" 
                                         Background="#FF4F3B34" 
                                         BorderBrush="#FF4F3B34" 
                                         Style="{StaticResource ListPickerStyle1}">
                         <toolkit:ListPicker.Header>
-                            <TextBlock Text="Вид кроводачи" FontSize="24" 
+                            <TextBlock Text="{Binding BloodGiveType, Source={StaticResource Loc}}" FontSize="24" 
 					Foreground="#FF847168"/>
                         </toolkit:ListPicker.Header>
                         <toolkit:ListPicker.ItemTemplate>
@@ -138,14 +138,14 @@
                         </toolkit:ListPicker.ItemTemplate>
                     </toolkit:ListPicker>
 
-                    <TextBlock Text="Дата и время"
+                    <TextBlock Text="{Binding DateAndTime, Source={StaticResource Loc}}"
 			Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
                     <StackPanel Orientation="Horizontal">
                         <toolkit:DatePicker Width="250" Name="Date" 
 					Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
                         <toolkit:TimePicker x:Name="Time"  Width="200" Value="{Binding Time, Mode=TwoWay}" Background="#FF4F3B34" Foreground="#FFDF8D4B"/>
                     </StackPanel>
-                    <TextBlock Text="Место"
+                    <TextBlock Text="{Binding Place, Source={StaticResource Loc}}"
 			 Style="{StaticResource Text24px847168}" Margin="12,0,0,0"/>
                     
                 <StackPanel Orientation="Horizontal">
@@ -158,14 +158,14 @@
                     </StackPanel>
                     
                 <StackPanel Name="Reminder" Visibility="Collapsed">
-                    <TextBlock Text="Напоминание" Style="{StaticResource Text24px847168}" Visibility="Collapsed"/>
+                        <TextBlock Text="{Binding Reminder, Source={StaticResource Loc}}" Style="{StaticResource Text24px847168}" Visibility="Collapsed"/>
                     <toolkit:ListPicker  x:Name="ReminderPeriod" 
 					Style="{StaticResource ListPickerStyle1}"
-					FullModeHeader="Напоминание" 
+					FullModeHeader="{Binding Reminder, Source={StaticResource Loc}}" 
 					Foreground="#FFDF8D4B" BorderBrush="#FF4F3B34" 
 					Background="#FF4F3B34">
                     <toolkit:ListPicker.Header>
-            			<TextBlock Text="Напомнить за" FontSize="24" 
+                                <TextBlock Text="{Binding ReminderBeforeEdit, Source={StaticResource Loc}}" FontSize="24" 
 						Foreground="#FF847168"/>        	
 					</toolkit:ListPicker.Header>
                         <toolkit:ListPicker.ItemTemplate>
@@ -178,9 +178,9 @@
                         </toolkit:ListPicker>
                     <CheckBox Name="KnowAboutResults" Visibility="Collapsed" 
 					FontSize="24"
-					Content="Узнать результат" IsChecked="{Binding ReminderMessage, Mode=TwoWay}" Foreground="#FF847168"/>
+					Content="{Binding KnowResult, Source={StaticResource Loc}}" IsChecked="{Binding ReminderMessage, Mode=TwoWay}" Foreground="#FF847168"/>
                 </StackPanel>
-                    <TextBlock Text="Комментарий"
+                    <TextBlock Text="{Binding CommentLabelEdit, Source={StaticResource Loc}}"
 					Style="{StaticResource Text24px847168}"
 					Margin="12,0,0,0"/>
                     <!--<TextBox AcceptsReturn="True" Height="260" 
@@ -205,8 +205,8 @@
 
         <WPExtensions:AdvancedApplicationBar Name="AppBar" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White"
 		IsVisible="True" IsMenuEnabled="True">
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_done.png" Name="SaveButton" Text="Сохранить" Visibility="Visible" Click="SaveButton_Click" />
-            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" Name="CancelButton" Text="Отменить" Visibility="Visible" Click="CancelButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_done.png" Name="SaveButton" Text="{Binding Save, Source={StaticResource Loc}}" Visibility="Visible" Click="SaveButton_Click" />
+            <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.cancel.png" Name="CancelButton" Text="{Binding Cancel, Source={StaticResource Loc}}" Visibility="Visible" Click="CancelButton_Click" />
         </WPExtensions:AdvancedApplicationBar>
 
     </Grid>
