--- a/wp7-donor/Donor/NewsPage.xaml
+++ b/wp7-donor/Donor/NewsPage.xaml
@@ -34,7 +34,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="20,60,0,20">
-            <TextBlock x:Name="ApplicationTitle" Text="Новости" 
+            <TextBlock x:Name="ApplicationTitle" Text="{Binding News, Source={StaticResource Loc}}" 
 			Style="{StaticResource Text30pxWhite}"/>
         </StackPanel>
 
