--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -32,7 +32,7 @@
         <Controls:ProgressOverlay Grid.Row="0" Name="progressOverlay" Height="800" Width="480">
             <Controls:ProgressOverlay.Content>
                 <StackPanel>
-                    <TextBlock Foreground="#FFFFFFFF" VerticalAlignment="Center" HorizontalAlignment="Center">Загрузка...</TextBlock>
+                    <TextBlock Foreground="#FFFFFFFF" VerticalAlignment="Center" HorizontalAlignment="Center" Text="{Binding Loading, Source={StaticResource Loc}}"/>
                     <toolkit:PerformanceProgressBar Name="Loading" IsIndeterminate="True" Height="10" Background="#FFA3CE57" Foreground="#FFE22A1B" />
                 </StackPanel>
             </Controls:ProgressOverlay.Content>
@@ -59,7 +59,7 @@
             	<controls:PanoramaItem.Header>
                     <TextBlock 
                         Style="{StaticResource Text70pxWhite}" 
-					Text="основное" Margin="0,30,0,0"/>
+					Text="{Binding MainStationPivot, Source={StaticResource Loc}}" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid Margin="0,10,0,0">
                     <StackPanel>
@@ -79,7 +79,7 @@
                         
                         <TextBlock TextWrapping="Wrap" 
                         Text="{Binding Adress}"	Style="{StaticResource Text24pxDF8D4B}"/>
-                        <TextBlock TextWrapping="Wrap" 	Text="Телефон" 
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Phone, Source={StaticResource Loc}}" 
                         Style="{StaticResource Text36pxB9A194}" Margin="0,10,0,0"/>
                         
                         <TextBlock TextWrapping="Wrap" 
@@ -89,7 +89,7 @@
 						Style="{StaticResource Text24pxDF8D4B}" 
 						Text="{Binding RegionalRegistrationString}" 
 						TextWrapping="Wrap"/>
-                        <TextBlock Text="Сайт"  Margin="0,10,0,0"
+                        <TextBlock Text="{Binding Site, Source={StaticResource Loc}}"   Margin="0,10,0,0"
 						Style="{StaticResource Text36pxB9A194}" 
 						TextWrapping="Wrap"/>
                         <TextBlock TextWrapping="Wrap" 
@@ -103,22 +103,22 @@
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="для доноров" Margin="-10,30,0,0"/>
+					Text="{Binding ForDonorsStation, Source={StaticResource Loc}}" Margin="-10,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <StackPanel>
                         <TextBlock TextWrapping="Wrap" 
-						Text="Время приема"  Margin="0,10,0,0"
+						Text="{Binding RecepientTime, Source={StaticResource Loc}}"  Margin="0,10,0,0"
 						Style="{StaticResource Text36pxB9A194}" />
                         <TextBlock TextWrapping="Wrap" Style="{StaticResource Text24pxDF8D4B}" Text="{Binding ReceiptTime}"/>
                         <TextBlock TextWrapping="Wrap" 
-						Text="Проезд" Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
+						Text="{Binding TransportStation, Source={StaticResource Loc}}" Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
                         <TextBlock TextWrapping="Wrap" 
 						Text="{Binding Transportaion}" 
 						Style="{StaticResource Text24pxDF8D4B}"/>
                         <StackPanel Name="BloodFor">
                         <TextBlock TextWrapping="Wrap" 
-						Text="Кровь сдается для"  Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
+						Text="{Binding BloodGivedFor, Source={StaticResource Loc}}"  Margin="0,10,0,0" Style="{StaticResource Text36pxB9A194}"/>
                             <TextBlock Text="{Binding BloodFor}" TextWrapping="Wrap"  Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                     </StackPanel>
@@ -128,7 +128,7 @@
             <controls:PanoramaItem Name="PanaramaAdsItem">
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="объявления" Margin="0,30,0,0"/>
+					Text="{Binding StationAds, Source={StaticResource Loc}}" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <ListBox Margin="0,0,0,0" ItemsSource="{Binding Ads.Items}" Name="StationAds" SelectionChanged="ListBox_SelectionChanged">
@@ -150,7 +150,7 @@
             <controls:PanoramaItem>
             	<controls:PanoramaItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="отзывы" Margin="0,30,0,0"/>
+					Text="{Binding StationReviews, Source={StaticResource Loc}}" Margin="0,30,0,0"/>
                 </controls:PanoramaItem.Header>
                 <Grid>
                     <ScrollViewer>
@@ -177,7 +177,7 @@ Style="{StaticResource Text24pxDF8D4B}"/>
                         </ListBox>
                     </ScrollViewer>
                         <WPExtensions:AdvancedApplicationBar Name="AppBar" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" IsVisible="True" IsMenuEnabled="False">
-                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Text="Написать" Name="CreateReviewButton" Click="CreateReviewButton_Click" />
+                        <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/appbar.edit.rest.png" Text="{Binding StationWriteReview, Source={StaticResource Loc}}" Name="CreateReviewButton" Click="CreateReviewButton_Click" />
                     </WPExtensions:AdvancedApplicationBar>
                 </Grid>
             </controls:PanoramaItem>
